[gd_scene load_steps=4 format=3 uid="uid://de5mkfn0p7nur"]

[ext_resource type="Script" path="res://Button2.gd" id="1_8y2ov"]
[ext_resource type="Texture2D" uid="uid://db60w81j6iiko" path="res://icon.svg" id="2_1cufi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owwum"]
size = Vector2(116, 118)

[node name="Button2" type="Node2D"]
script = ExtResource("1_8y2ov")

[node name="ButtonSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_1cufi")

[node name="ButtonArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonArea"]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_owwum")

[connection signal="input_event" from="ButtonArea" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="ButtonArea" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="ButtonArea" to="." method="_on_area_2d_mouse_exited"]
